--- a/css/index.css
+++ b/css/index.css
@@ -7,31 +7,35 @@
 
   body{
       height: 100%;
+      width: 100%;
   }
   
 
 /* navigation */
 /* black side bar */
-nav{
-    height: 100%;
-    width: 20%;
-    min-width: 50px;
-
-    background-color: rgba(0,0,0, 0.5);
-
-    color: white;
-    
-    position: absolute;
-    top:0;
-    right:0;
-}
 
 /* nav choices */
-ul{
-    position: sticky;
-    top: 50%;
+nav{
+    position: fixed;
+    height: 100%;
+    width: 20vw;
+
+    color: white;
+
+    top: 0;
+    right: 0;
+
+    background-color: rgba(0,0,0, 0.5);
 }
 
+ul{
+    position: fixed;
+    height: auto;
+    top: 50%;
+
+    text-align: center;
+    
+}
 /* header hero */
 
 header{
@@ -80,5 +84,97 @@ header{
 /* drawings section */
 main{
     height: 300vh;
+    width: 80%;
     min-height: 1200px;
+
+    display: grid;
+
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-flow: row;
+
+    background-color: black;
+}
+
+main img{
+    background-color: rgba(115, 115, 115, 1);
+
+    align-self: center;
+    justify-self: center;
+}
+
+/*************************************************/
+
+/* patreon section */
+
+#patreon{
+    height: 100vh;
+    width: 100%;
+    min-height: 400px;
+}
+
+#patreon-container{
+    width: 50%;
+    height: 100%;
+
+    margin-left: 5%;
+
+    background-color: rgba(0,0,0, 0.5);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#patreon-h2{
+    font-size: var(--h2);
+    margin-left: 10%;
+}
+
+#patreon-information-container{
+    height: 50%;
+    width: 80%;
+
+    display: grid;
+
+    grid-auto-flow: column;
+    grid-template-columns: 0.5fr 0.5fr;
+    grid-template-rows: repeat(1, 1fr);
+
+    margin: auto;
+    margin-top: 0;
+    margin-bottom: 0;
+
+    background-color: rgba(0,0,0, 0.5);
+}
+
+#patreon-information-container p{
+    height: 14%;
+    width: 80%;
+    margin: 1em 2em;
+}
+#patreon-information-container img{
+    margin: 1em 0;
+
+}
+
+#patreon-button{
+    margin-left: 0%;
+    margin-top: 5%;
+}
+
+#patreon-button button{
+    background: none;
+    border: none;
+    padding: 1% 9%;
+
+    margin-left: 50%;
+
+    box-shadow: 0px 7px 8px rgba(0,0,0, 0.7);
+
+    background-color: white;
+
+    border-radius: 15px;
+    border: 10px solid rgb(255, 103, 16);
+
+    font-size: var(--h2);
 }
